# =============================================================================
# eustress-roblox-import — Roblox place file importer
# =============================================================================
# Parses .rbxl / .rbxlx / .rbxm / .rbxmx into the Eustress instance model
# via the canonical eustress_common::instance_create pipeline.
#
# Status: wired — a workspace member with the rbx_* parsers active; File→Import
# Roblox Place + drag-drop call eustress_roblox_import::import_into_space.
#
# Spec: docs/architecture/ROBLOX_IMPORT_SPEC.md
# =============================================================================

[package]
name = "eustress-roblox-import"
version = "0.1.0"
edition = "2021"
description = "Roblox place file (.rbxl/.rbxlx/.rbxm/.rbxmx) → Eustress instance model"

[dependencies]
# In-tree deps. The `luau` feature pulls in compat::ClassMapping /
# PropertyMapping / ScriptTransformer — the curated Roblox↔Eustress
# class + property + script translation tables the importer delegates to
# (per ROBLOX_IMPORT_SPEC.md §5/§6, reuse not duplicate).
eustress-common = { path = "../common", features = ["luau"] }

# Workspace-shared utilities
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
blake3      = "1.5"

# Terrain SmoothGrid voxel-chunk compression (Wave 4.A.2). Same version
# `common` uses, already in the lockfile.
lz4_flex    = "0.11"

# Logging
tracing     = "0.1"

# Hex encoding (for uuid output)
hex         = "0.4"

# TOML emission for [properties.extras] routing + report serialization
toml        = "0.8"

# =============================================================================
# Roblox file-format parsers — all MIT, all pure Rust, all rojo-rbx.
# Enabled in Wave 4 (Phase 1) along with adding this crate to workspace.members.
# =============================================================================
# Upgraded 2026-06 from the 0.7/2.x set: the old rbx_binary 0.7 deserializer
# does not know value type 0x22 (the modern `Content` datatype, e.g.
# MaterialVariant.EmissiveMaskContent), so it desyncs on places saved by recent
# Roblox Studio (→ "stream did not contain valid UTF-8"). rbx_binary 1.0.0+
# added Content; this is the matching latest ecosystem set.
rbx_dom_weak           = "4"
rbx_binary             = "2"
rbx_xml                = "2"
rbx_reflection_database = "2"
rbx_reflection         = "6"   # ClassDescriptor / ClassTag — for the class-coverage audit + future property-schema validation

# Wave 8.A "BinaryDirect" backend (BinarySink). Optional so the default
# engine-free build never links worlddb; gated behind the `binary-sink`
# feature. When off, only TomlSink exists and the importer stays engine-free.
eustress-worlddb = { path = "../worlddb", optional = true }

# Columnar Parquet emit for the color manifest — the deferred
# `color_manifest.parquet` (color_manifest.rs header note), now homed in the
# eustress-data leaf. Optional so the default engine-free import build never
# links arrow/parquet; the default emit stays NDJSON.
eustress-data = { path = "../data", optional = true }

[features]
default = []
# Spec §8.A: the direct-binary import backend. Pulls in eustress-worlddb so
# BinarySink can write ArchInstanceCore rows straight into the Fjall store.
binary-sink = ["dep:eustress-worlddb"]
# Emit the color manifest as columnar Parquet (in addition to the default
# NDJSON) via the eustress-data leaf (DATA_PLATFORM_PLAN.md P0). OFF by default
# — pulls arrow-rs + parquet, so the default build is unchanged.
parquet = ["dep:eustress-data", "eustress-data/parquet"]

[dev-dependencies]
# Fixture diffing for golden tests
pretty_assertions = "1.4"
