[package]
name        = "eustress-stream-node"
version     = "0.1.0"
edition     = "2021"
description = "EustressStream network node — TCP transport, REST/SSE API, Forge cluster orchestration"
authors     = ["EustressEngine Contributors"]

[[bin]]
name = "eustress-stream-node"
path = "src/bin/eustress-stream-node.rs"

[dependencies]
# Core streaming engine
eustress-stream = { path = "../stream" }

# Serialization
bincode  = "1.3"
serde    = { version = "1", features = ["derive"] }
bytes    = "1"

# Async runtime + I/O
tokio         = { version = "1", features = ["full"] }
tokio-stream  = { version = "0.1", features = ["sync"] }

# REST + SSE
axum          = { version = "0.8", features = ["json", "macros"] }
axum-extra    = { version = "0.10", features = ["typed-header"] }
tower         = "0.5"
tower-http    = { version = "0.6", features = ["cors", "trace"] }

# Consistent hashing
ahash         = "0.8"

# Concurrent data structures
dashmap       = "6"

# Error handling + logging
thiserror     = "2"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI binary
clap          = { version = "4", features = ["derive", "env"] }

# Parking lot
parking_lot   = "0.12"

# Base64 for MCP JSON encoding
base64        = "0.22"

# Serialization for REST responses
serde_json    = "1"

[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile   = "3"

[[bench]]
name    = "network_throughput"
harness = false
