[package]
name = "eustress-stream"
version = "0.1.0"
edition = "2021"
description = "EustressStream — embedded cross-platform append-only streaming core"
authors = ["EustressEngine Contributors"]

# ─── Runtime ─────────────────────────────────────────────────────────────────
[dependencies]
bytes        = "1"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
flume        = "0.11"
parking_lot  = "0.12"
serde        = { version = "1", features = ["derive"] }
bytemuck     = { version = "1", features = ["derive"] }
memmap2      = "0.9"
tokio        = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "fs", "io-util", "macros"] }
thiserror    = "2"
tracing      = "0.1"
rkyv         = { version = "0.8", features = ["std"] }
zstd         = { version = "0.13", optional = true }
async-trait  = "0.1"
serde_json   = "1"

# Linux io_uring — optional, compile-time opt-in
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

# Bevy integration — optional (uses workspace dep to avoid version conflicts)
[dependencies.bevy]
workspace = true
optional = true

[features]
default  = ["compression"]
compression = ["zstd"]
io-uring = ["dep:io-uring"]   # Linux only — no-op on other platforms
bevy     = ["dep:bevy"]

[dev-dependencies]
criterion   = { version = "0.5", features = ["html_reports"] }
tempfile    = "3"

[[bench]]
name    = "throughput"
harness = false
